--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,7 +80,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
+  gap: 32px;
+  margin-bottom: 48px;
 }
 
 .gallery {
